1.0.3 (unreleased)
=====

1.0.2 (2007-10-09)
=====
* Started to add documentation in curses.mli.
* Using OCamlMakefile for the makefile, now handles bytecode-only compilation.
* Libraries are now named curses.cm(x)a.

1.0.1 (2007-08-25)
=====
* Initial release.