@@ -1,5 +1,7 @@
 1.0.3 (unreleased)
 =====
+* get*yx now return coordinates in the right order (thanks Brian Campbell).
+* Fix possible segfault with get_ripoff (thanks Brian Campbell).
 
 1.0.2 (2007-10-09)
 =====
